[package]
name = "bot_discord"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.10.0"
futures = "0.3"

reqwest = "0.12"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
